[tool.black]
line-length = 120

[tool.poetry]
name = "claude-plugins"
version = "0.1.0"
description = ""
authors = ["Lajos Santa <santa.lajos@gmail.com>"]
readme = "README.md"
packages = [{include = "claude_plugins"}]

[tool.poetry.dependencies]
python = "^3.10"
claude = {path = "../claude-v2", develop = true}


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-watch = "^4.2.0"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
